--- a/src/components/selectorForm.css
+++ b/src/components/selectorForm.css
@@ -5,7 +5,7 @@
 select {
   border-radius: 0;
   height: 2rem;
-  width: 30%;
+  width: 20%;
   display: inline-block;
 
   &:focus {
@@ -14,16 +14,23 @@ select {
   }
 }
 button {
-  padding: 1rem 2rem;
+  padding: .25rem .5rem;
   text-transform: uppercase;
-  font-size: 0.8rem;
+  font-size: 0.4rem;
   background: blue;
   color: white;
   border: none;
   border-radius: 3px;
-  margin: 0.5rem 0;
+  margin: 0.5rem .5rem;
+  display: inline-block;
 
   &:hover {
     opacity: 0.8;
   }
+}
+
+.separator{
+  display: inline-block;
+  width: 40%;
+  margin-left: -165px;
 }
